# tresorit-dropbox-discovery

./: Cargo.toml  README.md  build-linux.sh  build-macos.sh  build-win.cmd
src/: main.rs
